changed fixed frame rate and aspect ratio

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,7 +60,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SummerProj")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SummerProj")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SummerProjGameModeBase")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
