FPS no body with idle
Instead of true FPS tried a different approach because true fps may not be needed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map1.Map1
 EditorStartupMap=/Game/Map1.Map1
-GlobalDefaultGameMode=/Script/SummerProj.BaseGameMode
+GlobalDefaultGameMode=/Game/GameModes/BP_BaseGameMode.BP_BaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
